Add separate button for cancelling subscription

--- a/app/views/users/subscriptions/show.html.erb
+++ b/app/views/users/subscriptions/show.html.erb
@@ -2,106 +2,110 @@
 
 <div class="bg-blue-pastel">
 
-  <section class="section-padding">
-    <h1 class="heading-xl mb-6"><%= t 'settings' %></h1>
+  <section class="section-padding space-y-6">
+    <h1 class="heading-xl"><%= t 'settings' %></h1>
 
-    <div class="text-center mb-6">
+    <div class="text-center">
       <ul class="inline-flex overflow-hidden rounded shadow">
         <li class="px-2 py-1 bg-white hover:bg-green-shade-1 hover:text-white transition ease-in-out duration-200"><%= link_to t('account_settings'), edit_user_registration_path %></li>
         <li class="px-2 py-1 bg-primary text-white hover:bg-green-shade-1 transition ease-in-out duration-200"><%= link_to t('payment_settings'), user_subscription_path %></li>
       </ul>
     </div>
     <div class="callout max-w-xl mx-auto">
-      <%= form_tag({ action: :update }, id: "payment-form", method: :put, class: "space-y-3") do %>
+      <%= form_tag({ action: :update }, id: "payment-form", method: :put) do %>
+        <div class="space-y-3">
+          <h2 class="heading"><%= t 'views.subscriptions.update.heading' %></h2>
+          <% if flash[:error].present? %>
+            <div id="error_explanation" data-controller="scroll-here">
+              <p><%= flash[:error] %></p>
+            </div>
+          <% end %>
 
-        <% if flash[:error].present? %>
-          <div id="error_explanation" data-controller="scroll-here">
-            <p><%= flash[:error] %></p>
-          </div>
-        <% end %>
+          <p id="error-content"></p>
 
-        <p id="error-content"></p>
+          <%= hidden_field(:setup_intent, :client_secret) %>
 
-        <%= hidden_field(:setup_intent, :client_secret) %>
-
-        <div>
-          <label for="plan" class="block font-bold"><%= t 'climate_plan' %></label>
-          <div class="select-wrapper w-full">
-            <select id="plan" name="user[plan]" class="select">
-              <% if current_page?(controller: 'subscriptions', action: 'show') %>
-                <% if @current_plan_price %>
-                  <option value="cancel">cancel climate plan</option>
-                <% else %>
-                  <option value="" selected=1>-</option>
+          <div>
+            <label for="plan" class="block font-bold"><%= t 'climate_plan' %></label>
+            <div class="select-wrapper w-full">
+              <select id="plan" name="user[plan]" class="select" required>
+                <% unless @current_plan_price %>
+                  <option value="" selected=1><%= t 'views.subscriptions.update.no_subscription' %></option>
                 <% end %>
-              <% end %>
 
-              <% @available_plans.each do |i| %>
-                <option value="<%= i.amount %>" <%= i == @current_plan_price ? "selected" : "" %> >
-                  <%= i.to_s(precision: :auto) %>
-                </option>
-              <% end %>
-            </select>
-          </div>
-        </div>
-
-        <div id="current-card-group">
-          <label for="current-card" class="font-bold">
-            <%=t 'credit_or_debit_card' %>
-          </label>
-
-          <div id="current-card" class="m-lg:flex m-lg:items-center">
-            <% if @customer_payment_method.nil? %>
-              t('no_card_registered')
-            <% else %>
-              <div class="flex-1">
-                <span>
-                  <% if card_brand(@customer_payment_method) == 'visa' %>
-                    <span class="card-visa"></span>
-                  <% elsif card_brand(@customer_payment_method) == 'mastercard' %>
-                    <span class="card-mastercard"></span>
-                  <% end %>
-                  <%= masked_card_number(@customer_payment_method) %>
-                </span>
-                <span class="card-expiration"><%= card_expiration(@customer_payment_method) %></span>
-                
-              </div>
-            <% end %>
-
-            <div class="mt-1 capitalize">
-              <a href="#" id="add-new-card" class="button"><%= @customer_payment_method.nil? ? t('add_new_card') : t('edit_card') %></a>
+                <% @available_plans.each do |i| %>
+                  <option value="<%= i.amount %>" <%= i == @current_plan_price ? "selected" : "" %> >
+                    <%= i.to_s(precision: :auto) %>
+                  </option>
+                <% end %>
+              </select>
             </div>
           </div>
 
-        </div>
-        
-        <div id="new-card-div" class="hidden">
-          <label for="card-element" class="font-bold"><%=t 'add_new_card' %></label>
-          <div id="card-element" class="input py-1"></div>
-        </div>
+          <div id="current-card-group">
+            <label for="current-card" class="font-bold">
+              <%=t 'credit_or_debit_card' %>
+            </label>
 
-        <div id="card-errors"></div>
+            <div id="current-card" class="m-lg:flex m-lg:items-center">
+              <% if @customer_payment_method.nil? %>
+                t('no_card_registered')
+              <% else %>
+                <div class="flex-1">
+                  <span>
+                    <% if card_brand(@customer_payment_method) == 'visa' %>
+                      <span class="card-visa"></span>
+                    <% elsif card_brand(@customer_payment_method) == 'mastercard' %>
+                      <span class="card-mastercard"></span>
+                    <% end %>
+                    <%= masked_card_number(@customer_payment_method) %>
+                  </span>
+                  <span class="card-expiration"><%= card_expiration(@customer_payment_method) %></span>
+                </div>
+              <% end %>
 
-        <div>
-          <i class="fa fa-lock" aria-hidden="true"></i> <span class="ml-1">Secured by Stripe</span>
+              <div class="mt-1 capitalize">
+                <a href="#" id="add-new-card" class="button"><%= @customer_payment_method.nil? ? t('add_new_card') : t('edit_card') %></a>
+              </div>
+            </div>
+
+          </div>
+
+          <div id="new-card-div" class="hidden">
+            <label for="card-element" class="font-bold"><%=t 'add_new_card' %></label>
+            <div id="card-element" class="input py-1"></div>
+          </div>
+
+          <div id="card-errors"></div>
+
+          <div>
+            <i class="fa fa-lock" aria-hidden="true"></i> <span class="ml-1">Secured by Stripe</span>
+          </div>
+
+          <div class="actions">
+            <button id="register-button" type="submit" class="button button-cta w-full">
+              <i class="fa fa-spinner fa-spin hidden" id="button-spinner"></i>
+              <%= t 'update' %>
+            </button>
+          </div>
         </div>
-
-        <div class="actions">
-          <button id="register-button" type="submit" class="button button-cta w-full">
-            <i class="fa fa-spinner fa-spin hidden" id="button-spinner"></i>
-            <%= t 'update' %>
-          </button>
-        </div>
-
       <% end %>
     </div>
+
+    <% if @current_plan_price %>
+      <div class="callout max-w-xl mx-auto">
+        <h2 class="heading mb-3"><%= t 'views.subscriptions.cancel.heading' %></h2>
+        <%= form_tag({ action: :destroy }, method: :delete) do %>
+          <%= button_tag t('views.subscriptions.cancel.action'), class: "button w-full", onclick: "return confirm('#{t('views.subscriptions.cancel.confirm')}')" %>
+        <% end %>
+      </div>
+    <% end %>
   </section>
 
   <%= render "shared/bottom_landscape" %>
 </div>
 
 <%= render "shared/footer", skip_prefooter: true %>
-
 
 <% content_for :javascript_tags do %>
   <script type="text/javascript">
