--- a/app/views/errors/unprocessable_entity.html.erb
+++ b/app/views/errors/unprocessable_entity.html.erb
@@ -1,11 +1,11 @@
 <%= render "shared/header" %>
-  <section class="section-padding text-center">
-    <div class="callout">
-      <h1 class="text-4xl font-bold my-6">There was an error processing your request <i class="fa fa-frown-o" aria-hidden="true"></i></h1>
-      <div class="space-y-3">
-        <p>We're sorry, but something your browser sent to us was not in the format we expected it to be. Please try again.</p>
-        <p>If you have any questions, please don't hesitate to get in touch with us at <%= link_to 'hello@goclimate.com', 'mailto:hello@goclimate.com', class: 'link' %>.</p>
-      </div>
-    </div>
-  </section>
-<%= render "shared/footer" %>
+
+<section class="section-padding min-h-1/2-screen flex items-center">
+  <div class="max-w-xl mx-auto space-y-3">
+    <h1 class="heading-lg">There was an error processing your request</h1>
+    <p>We're sorry, but something your browser sent to us was not in the format we expected it to be. Please try again.</p>
+    <p>If you have any questions, please don't hesitate to get in touch with us at <%= link_to 'hello@goclimate.com', 'mailto:hello@goclimate.com', class: 'link' %>.</p>
+  </div>
+</section>
+
+<%= render "shared/footer", skip_prefooter: true %>
