--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
   </head>
 
   <%# TODO: Change text-green-dark to text-primary when Bootstrap is gone. These apply to both new and old worlds, so text-primary clashes because it exists in both. %>
-  <body class="<%= controller_name + " " + controller_name + "-" + action_name %> min-h-screen text-base text-green-dark bg-yellow-pastel">
+  <body class="<%= controller_name + " " + controller_name + "-" + action_name %> min-h-screen text-base text-green-dark bg-primary">
 
     <% if params[:registered].to_i == 1 %>
       <script>
@@ -90,7 +90,9 @@
       </script>
     <% end %>
 
-    <%= yield %>
+    <div class="bg-yellow-pastel">
+      <%= yield %>
+    </div>
 
     <script>
       function reportLoadError(event) {
