--- a/app/views/shared/_prefooter.html.erb
+++ b/app/views/shared/_prefooter.html.erb
@@ -1,4 +1,4 @@
-<section class="z-0 mt-16 d-md:32">
+<section class="relative z-0 mt-16 d-md:32">
   <div class="relative max-w-3xl mx-auto py-10 px-10 d:px-0 text-center space-y-3 z-0">
     <h3 class="heading-lg mb-6"><%= t('views.shared.prefooter.heading') %></h3>
     <p><%= t('views.shared.prefooter.body_text') %> </p>
