--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,12 +1,12 @@
 <%= render "shared/header" %>
-  <section class="section-padding text-center">
-    <div class="callout">
-      <h1 class="text-4xl font-bold my-6">An error occurred on our side <i class="fa fa-frown-o" aria-hidden="true"></i></h1>
-      <div class="space-y-3">
-        <p>We're sorry, but an error occured on our side. We have been notified about it and will look into it as soon as possible. Please try again in a few moments.</p>
-        <p>If you have any questions, please don't hesitate to get in touch with us at <%= link_to 'hello@goclimate.com', 'mailto:hello@goclimate.com', class: 'link' %>.</p>
-      </div>
-    </div>
-  </section>
-<%= render "shared/footer" %>
+
+<section class="section-padding min-h-1/2-screen flex items-center">
+  <div class="max-w-xl mx-auto space-y-3">
+    <h1 class="heading-lg">An error occurred on our side</h1>
+    <p>We're sorry, but an error occured on our side. We have been notified about it and will look into it as soon as possible. Please try again in a few moments.</p>
+    <p>If you have any questions, please don't hesitate to get in touch with us at <%= link_to 'hello@goclimate.com', 'mailto:hello@goclimate.com', class: 'link' %>.</p>
+  </div>
+</section>
+
+<%= render "shared/footer", skip_prefooter: true %>
 
