Add modal styles

--- a/app/assets/main/index.scss
+++ b/app/assets/main/index.scss
@@ -12,6 +12,7 @@
 @import 'components/input.scss';
 @import 'components/link.scss';
 @import 'components/lists.scss';
+@import 'components/modal.scss';
 @import 'components/section_gutter.scss';
 @import 'components/section_padding.scss';
 @import 'components/select.scss';
