Add CSS component tooltip

--- a/app/assets/main/index.scss
+++ b/app/assets/main/index.scss
@@ -17,6 +17,7 @@
 @import 'components/section_padding.scss';
 @import 'components/select.scss';
 @import 'components/toggler.scss';
+@import 'components/tooltip.scss';
 
 @import 'tailwindcss/utilities';
 
