--- a/app/views/travel_calculator/show.html.erb
+++ b/app/views/travel_calculator/show.html.erb
@@ -1,64 +1,60 @@
-<% content_for :stylesheets do %>
-  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
-<% end %>
-<% content_for :javascripts do %>
-  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'reportLoadError(event)' %>
-<% end %>
+<%= render "shared/header" %>
 
-<div class="site-wrapper-first">
-  <%= render "shared/header_old" %>
-  <div class="inner">
-    <span class="glyphicon glyphicon-large glyphicon-plane" aria-hidden="true"></span>
-    <h1 class="cover-heading"><%= title(t('views.welcome.travel_calculator.travel_emissions_calculator')) %></h1>
-    <p class="lead text-center"><%= description(t('views.welcome.travel_calculator.travel_emissions_calculator_description')) %></p>
+<section class="section-padding text-center">
+  <h1 class="heading-xl">
+    <%= title(t('views.welcome.travel_calculator.travel_emissions_calculator')) %>
+  </h1>
+  <p class="mt-6 t:w-2/3 d:w-1/2 mx-auto">
+    <%= description(t('views.welcome.travel_calculator.travel_emissions_calculator_description')) %>
+  </p>
 
-    <form class="form-inline" id="distance-form" style="margin-top: 50px;">
-      <div class="form-group">
-        <label for="exampleInputName2"><%= t('views.welcome.travel_calculator.distance_in_kilometers') %>:</label>
-        <input type="text" class="form-control" id="distance" placeholder="100" value="100">
-        <button type="submit" class="btn btn-default"><%= t('views.welcome.travel_calculator.calculate') %></button>
-      </div>
+  <div class="space-y-3">
+    <form class="mt-16 space-y-1" id="distance-form">
+        <label for="distance" class="font-bold block"><%= t('views.welcome.travel_calculator.distance_in_kilometers') %></label>
+        <div class="flex flex-col m-lg:flex-row m-lg:justify-center space-y-1 m-lg:space-x-1 m-lg:space-y-0">
+          <input type="text" class="input" id="distance" placeholder="100" value="100" size="5">
+          <button type="submit" class="button"><%= t('views.welcome.travel_calculator.calculate') %></button>
+        </div>
     </form>
 
-    <div class="center-block lead" style="margin-top: 50px;">
-      <%= t('views.welcome.travel_calculator.emissions_if_traveling_by') %>:
-        <div class="center-block">
-          <table class="center-block text-left" style="max-width: 400px;">
+    <div>
+      <p class="mb-3 font-bold">
+        <%= t('views.welcome.travel_calculator.emissions_if_traveling_by') %>
+      </p>
 
-            <% ['flight',
-                'car_petrol',
-                'car_diesel',
-                'car_etanol',
-                'car_gas',
-                'car_electric',
-                'bus',
-                'train',
-                'subway',
-                'boat'].each do |type| %>
-            <tr>
-              <td style="min-width: 50px; padding: 5px;">
-                <%= t("views.welcome.travel_calculator.#{type}") %>:
-              </td>
-              <td>
-                <div id="<%= type %>-background" style="background-color: #BCD2BE; width: 50px;">
-                  <span style="white-space: nowrap; padding-left: 5px">
-                    <b><span id="<%= type %>" class="big-number" data-target-number="0">0</span></b> kg CO2e
+      <div class="w-100 mx-auto space-y-2">
+        <% ['flight',
+            'car_petrol',
+            'car_diesel',
+            'car_etanol',
+            'car_gas',
+            'car_electric',
+            'bus',
+            'train',
+            'subway',
+            'boat'].each do |type| %>
+              <div class="flex flex-row items-center">
+                <div class="text-right w-32">
+                  <%= t("views.welcome.travel_calculator.#{type}") %>
+                </div>
+                <div class="text-left ml-2 relative">
+                  <div id="<%= type %>-background" class="bg-green-dark rounded-r py-1 w-2 h-8"></div>
+                  <span class="pl-1 whitespace-no-wrap absolute left-100 top-1/2 transform -translate-y-1/2">
+                    <span id="<%= type %>" class="font-bold" data-target-number="0">0</span> kg CO2e
                   <span>
                 </div>
-              </td>
-            </tr>
+              </div>
             <% end %>
-            
-          </table>
-        </div>
-
-
-      <div style="margin-top: 80px"><a href="/" class="btn btn-lg btn-success"><%=t 'views.welcome.travel_calculator.offset_the_emissions_here' %></a></div>
-
-
+      </div>
     </div>
 
-    <% content_for :javascript_tags do %>
+    <div>
+      <a href="/" class="button button-cta"><%=t 'views.welcome.travel_calculator.offset_the_emissions_here' %></a>
+    </div>
+  </div>
+</section>
+
+<% content_for :javascript_tags do %>
       <script>
         function processForm(e) {
           if (e.preventDefault) e.preventDefault();
@@ -81,7 +77,7 @@
             var barLength = emissionType[1] * 250 / 0.25;
             document
               .getElementById(emissionType[0] + "-background")
-              .setAttribute("style", "background-color: #BCD2BE; width: " + barLength + "px;");
+              .setAttribute("style", "width: " + barLength + "px;");
             document
               .getElementById(emissionType[0])
               .setAttribute("data-target-number", distance * emissionType[1]);
@@ -101,8 +97,4 @@
       </script>
     <% end %>
 
-    <div style="margin-bottom:300px"></div>
-  </div>
-</div>
-
-<%= render "shared/footer_old" %>
+<%= render "shared/footer" %>
