--- a/app/views/users/receipts/index.html.erb
+++ b/app/views/users/receipts/index.html.erb
@@ -1,44 +1,27 @@
-<% content_for :stylesheets do %>
-  <%= webpack_entrypoint_stylesheet_tags 'main_old' %>
-<% end %>
-<% content_for :javascripts do %>
-  <%= webpack_entrypoint_javascript_tags 'main_old', onerror: 'reportLoadError(event)' %>
-<% end %>
+<%= render "shared/header" %>
 
-<div class="site-wrapper-first">
-  <%= render "shared/header_old" %>
-  <div class="inner">
+<div class="bg-blue-pastel">
+  <section class="section-padding">
+    <h1 class="heading-xl mb-6"><%= t 'views.receipts.heading' %></h1>
 
-    <span class="glyphicon glyphicon-large glyphicon-duplicate" aria-hidden="true"></span>
+    <div class="space-y-3">
+      <div class="flex flex-row font-bold">
+        <div class="w-1/3"><%= t 'views.receipts.date' %></div>
+        <div class="w-1/3"><%= t 'views.receipts.amount' %></div>
+        <div class="w-1/3"><%= t 'views.receipts.link' %></div>
+      </div>
+      <% @receipts.each do |receipt| %>
+        <div class="flex flex-row">
+          <div class="w-1/3"><%= receipt.date %></div>
+          <div class="w-1/3"><%= price_string(receipt.total_amount, receipt.currency) %></div>
+          <div class="w-1/3"><%= link_to t('views.receipts.view'), user_receipt_path(receipt.card_charge.id), class: 'link' %></div>
+        </div>
+      <% end %>
 
-  </div>
-  <div class="row">
-
-    <h1>Your receipts</h1>
-    <div class="col-xs-12">
-      <p class="lead">Here you can see your receipts</p>
     </div>
-
-  </div>
-  <div class="row">
-
-    <div class="col-xs-offset-4 col-xs-4">
-      <table class="table table-striped">
-        <tr>
-          <th>Date</th>
-          <th>Amount</th>
-          <th>link</th>
-        </tr>
-        <% @receipts.each do |receipt| %>
-          <tr>
-            <td><%= receipt.date %></td>
-            <td><%= price_string(receipt.total_amount, receipt.currency) %></td>
-            <td><%= link_to 'View receipt', user_receipt_path(receipt.card_charge.id) %></td>
-          </tr>
-        <% end %>
-
-      </table>
-    </div>
-
-  </div>
+  </section>
+  <%= render "shared/bottom_landscape" %>
 </div>
+
+<%= render "shared/footer", skip_prefooter: true %>
+
