--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -39,56 +39,8 @@
       <% end %>
     </div>
   </div>
-  <div class="relative z-10 overflow-x-hidden w-full h-96 t:h-128 relative t:-mt-16">
-    <div class="absolute h-full w-full">
-      <div class="relative h-full mx-auto" style="max-width: 1440px">
-        <%= image_tag webpack_asset_path('images/illustrations/hero/left_behind_horizon-1x.png'), 
-          srcset: { 
-              webpack_asset_path('images/illustrations/hero/left_behind_horizon-2x.png') => "2x"
-          }, 
-          class: 'absolute right-1/2 d:right-auto d:left-0 h-full max-w-none', 
-          style: 'margin-left: -120px', alt: '' %>
-        <%= image_tag webpack_asset_path('images/illustrations/hero/right_behind_horizon-1x.png'),
-          srcset: { 
-              webpack_asset_path('images/illustrations/hero/right_behind_horizon-2x.png') => "2x"
-          },
-          class: 'absolute left-1/3 m-lg:left-1/2 d:left-auto d:right-0 h-full max-w-none',
-          style: 'margin-right: -120px', alt: '' %>
-      </div>
-    </div>
-    <div class="absolute h-full w-full">
-      <%= image_tag webpack_asset_path('images/illustrations/hero/horizon.svg'), class: 'w-full h-full', alt: '' %>
-    </div>
-    <div class="absolute h-full w-full">
-      <div class="h-full mx-auto text-center d-md:space-x-4">
-        <%= image_tag webpack_asset_path('images/illustrations/hero/middle_left-1x.png'),
-          srcset: { 
-            webpack_asset_path('images/illustrations/hero/middle_left-2x.png') => "2x"
-          },
-          class: 'hidden d-md:inline h-full max-w-none', alt: '' %>
-        <%= image_tag webpack_asset_path('images/illustrations/hero/middle_right-1x.png'),
-          srcset: { 
-            webpack_asset_path('images/illustrations/hero/middle_right-2x.png') => "2x"
-          },
-          class: 'hidden d:inline h-full max-w-none', alt: '' %>
-      </div>
-    </div>
-    <div class="absolute h-full w-full">
-      <div class="relative h-full mx-auto" style="max-width: 1440px">
-        <%= image_tag webpack_asset_path('images/illustrations/hero/left-1x.png'),
-          srcset: { 
-            webpack_asset_path('images/illustrations/hero/left-2x.png') => "2x"
-          },
-          class: 'absolute right-1/3 m-lg:right-1/2 d:right-auto d:left-0 h-full max-w-none',
-          style: 'margin-left: -120px', alt: '' %>
-        <%= image_tag webpack_asset_path('images/illustrations/hero/right-1x.png'),
-          srcset: { 
-            webpack_asset_path('images/illustrations/hero/right-2x.png') => "2x"
-          },
-          class: 'absolute left-2/3 m-lg:left-1/2 d:left-auto d:right-0 h-full max-w-none',
-          style: 'margin-right: -120px', alt: '' %>
-      </div>
-    </div>
+  <div class="z-10 t:-mt-16">
+    <%= render "shared/hero_landscape" %>
   </div>
 </section>
 
