--- a/app/views/business/climate_report_invoices/thank_you.html.erb
+++ b/app/views/business/climate_report_invoices/thank_you.html.erb
@@ -3,15 +3,9 @@
 <section class="section-padding">
   <h1 class="heading-xl mb-6"><%=t 'thank_you' %></h1>
   <div class="d:w-1/2 space-y-3">
-    <p class="text-lg">
-      <%=t 'business.climate_report_invoices.thank_you.thank_you_text' %>
-    </p>
-    <p class="text-lg">
-      <%=t 'business.climate_report_invoices.thank_you.well_be_in_touch' %>
-    </p>
-    <p class="text-lg">
-      <%=t 'business.climate_report_invoices.thank_you.thanks_again' %>
-    </p>
+    <p><%=t 'business.climate_report_invoices.thank_you.thank_you_text' %></p>
+    <p><%=t 'business.climate_report_invoices.thank_you.well_be_in_touch' %></p>
+    <p><%=t 'business.climate_report_invoices.thank_you.thanks_again' %></p>
   </div>
 </section>
 
